k8s/istio-ingress/test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
        version: v1
    spec:
      containers:
        - name: test
          image: yuexclusive/test:latest
          ports:
            - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
        version: v2
    spec:
      containers:
        - name: test
          image: yuexclusive/test:latest
          ports:
            - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
        version: v3
    spec:
      containers:
        - name: test
          image: yuexclusive/test:latest
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: test
